add css feature to this website

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ An individual who is truly an optimist has the ability to be both objective and 
     </main>
     <b><center><footer >Copy rights 2021</footer></center></b>
 
-    <!-- <script src="app.js"></script> -->
+    <script src="app.js"></script>
 
   </body>
 </html>
